# CodeClass

./: .env.example  .gitignore  .prettierrc  CMakeLists.txt  README.md  build.sh  docker-compose.yml  index.html  package-lock.json  package.json  run.sh  tailwind.config.ts  tsconfig.json
client/: Dockerfile  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
client/src/: App.tsx  index.css
db/: old_schema.sql  schema.sql
docker_images/cpp/: runner.py
docker_images/javascript\typescript/: Dockerfile
docker_images/python/: Dockerfile  runner.py
include/: JudgeEngine.h  JudgeWorker.h  Judge_worker.h  Logger.h  RedisHandler.h  Redis_handler.h  ThreadPool.h
judge/: .dockerignore  CMakeLists.txt  Dockerfile
judge/docker_images/c\cpp/: Dockerfile  runner.py
judge/docker_images/javascript\typescript/: Dockerfile  package.json  runner.ts
judge/docker_images/javascript\typescript/security/: seccomp-js.json
judge/docker_images/python/: Dockerfile  runner.py
judge/include/: JudgeWorker.h  RedisHandler.h  ScopedTempFile.h  ThreadPool.h
judge/scripts/: run_judge.sh
judge/src/: JudgeEngine.cpp  JudgeWorker.cpp  RedisHandler.cpp  main.cpp
scripts/: build_images.sh
server/: Dockerfile  package.json
server/db/: old_schema.sql  schema.sql
server/src/: server.ts
src/: App.tsx  JudgeEngine.cpp  JudgeWorker.cpp  Judge_worker.cpp  RedisHandler.cpp  Redis_handler.cpp  index.css  main.cpp  server.ts
src/components/: AssignmentDescriptionPanel.tsx  AuthenticatedNav.tsx  CodeEditor.tsx  Logo.tsx  MoodleExport.tsx  MoodleIntegration.tsx  Navbar.tsx
(+276 files in other folders)
